# aoc2023

./: .gitignore  Cargo.toml  justfile
day-template/: Cargo.toml
day-template/benches/: bench.rs
day-template/src/: lib.rs  part1.rs  part2.rs
days/day01/: Cargo.toml
days/day01/benches/: bench.rs
days/day01/src/: lib.rs  part1.rs  part2.rs
days/day02/: Cargo.toml
days/day02/src/: lib.rs  part1.rs  part2.rs
days/day1/: Cargo.toml
days/day1/benches/: bench.rs
days/day1/src/: lib.rs  part1.rs  part2.rs
days/day2/: Cargo.toml
days/day2/benches/: bench.rs
days/day2/src/: lib.rs  parser.rs  part1.rs  part2.rs
days/day3/: Cargo.toml
days/day3/benches/: bench.rs
days/day3/src/: lib.rs  part1.rs  part2.rs
days/day4/: Cargo.toml
days/day4/benches/: bench.rs
days/day4/src/: lib.rs  part1.rs  part2.rs
days/day5/: Cargo.toml
days/day5/benches/: bench.rs
days/day5/src/: lib.rs  part1.rs  part2.rs
days/day6/: Cargo.toml
days/day6/benches/: bench.rs
days/day6/src/: lib.rs  part1.rs  part2.rs
days/day7/: Cargo.toml
days/day7/benches/: bench.rs
days/day7/src/: part1.rs  part2.rs
utils/: Cargo.toml
utils/src/: lib.rs
