[package]
name = "day2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bench]]
name = "bench"
harness = false


[dependencies]
nom = {workspace = true}
utils = {workspace = true}
anyhow = {workspace = true}

[dev-dependencies]
criterion = {workspace = true}
