[package]
name = "day4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bench]]
name = "bench"
harness = false


[dependencies]
utils = {workspace = true}
anyhow = {workspace = true}
nom = {workspace = true}
rustc-hash = "1.1.0"

[dev-dependencies]
criterion = {workspace = true}
