[package]
name = "day6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bench]]
name = "bench"
harness = false


[dependencies]
utils = {workspace = true}
anyhow ={ workspace = true }
nom ={ workspace = true }
itertools ={ workspace = true }

[dev-dependencies]
criterion = {workspace = true}
